# hw_23.2

./: .env  .env.sample  .gitignore  catalog.json  manage.py  pyproject.toml  readme.md
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category.json  product.json
catalog/management/commands/: fill.py  load_custom_data.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_product_manufactured_at.py  0003_delete_contact_alter_product_photo.py  0003_remove_product_manufactured_at.py  0004_contactinfo.py  0005_rename_address_contactinfo_message.py  0006_remove_contactinfo_email.py  0007_blog_alter_category_description.py  0008_alter_product_description.py  0009_remove_blog_number_views_blog_views_counter_and_more.py  0010_alter_blog_options_alter_blog_content_and_more.py  0011_rename_slog_blog_slug_alter_blog_date_creation.py  0012_alter_blog_slug.py  0013_parent.py  0014_version_delete_parent.py  0015_product_owner.py  0016_alter_product_options.py  0017_product_publication_sign.py  0018_alter_product_publication_sign.py
catalog/templates/: base.html  contacts.html  index.html  product_detail.html  product_ditail.html  product_list.html
catalog/templates/catalog/: base.html  (+9 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
config/config/: settings.py
management/commands/: fill.py
newapp/: urls.py  views.py
newapp/templates/: home.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_country.py
users/templates/: login.html
(+8 files in other folders)
