[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.26.0"
django = "4.2.2"
redis = "^5.0.8"
django-redis = "^5.4.0"
env = "^0.1.0"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
